syntax = "proto3";

package log.v1;

option go_package = "github.com/mrshabel/gumlog/api/log_v1";

// log service with related endpoints
service Log {
    rpc Produce(ProduceRequest) returns (ProduceResponse) {}
    rpc Consume(ConsumeRequest) returns (ConsumeResponse) {}
    
    // uni-directional server-side streaming
    rpc ConsumeStream(ConsumeRequest) returns (stream ConsumeResponse) {}
    // bi-directional streaming RPC using read-write stream
    rpc ProduceStream(stream ProduceRequest) returns (stream ProduceResponse) {}
}

message Record {
    bytes value = 1;
    uint64 offset = 2;
    uint64 term = 3;
    uint32 type = 4;
}

message ProduceRequest {
    Record record = 1;
}

message ProduceResponse {
    uint64 offset = 1;
}

message ConsumeRequest {
    uint64 offset = 1;
}

message ConsumeResponse {
    Record record = 2;
}